--- a/collab/git-mania/cities.html
+++ b/collab/git-mania/cities.html
@@ -27,6 +27,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto (2,800,00)</li>
+    <li>Vancouver (1, 400, 000)</li>
   </ol>
 
 </body>
