--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto (2,800,00)</li>
     <li>Vancouver (1, 400, 000)</li>
+    <li> Calgary (5)</li>
   </ol>
 
 </body>
